// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tag/demo/Basic.js correctly test 1`] = `
<div>
  <div
    class="jc-tag"
    data-show="true"
  >
    Tag 1
  </div>
  <div
    class="jc-tag"
    data-show="true"
  >
    <a
      href="https://github.com/ant-design/ant-design/issues/1862"
    >
      Link
    </a>
  </div>
  <div
    class="jc-tag"
    data-show="true"
  >
    Tag 2
    <i
      class="jcicon jcicon-cross "
    />
  </div>
  <div
    class="jc-tag"
    data-show="true"
  >
    Prevent Default
    <i
      class="jcicon jcicon-cross "
    />
  </div>
</div>
`;

exports[`renders ./components/tag/demo/Checkable.js correctly test 1`] = `
<div
  class="jc-tag jc-tag-checkable jc-tag-checkable-checked"
/>
`;

exports[`renders ./components/tag/demo/Colorful.js correctly test 1`] = `
<div>
  <h4
    style="margin-bottom:16px"
  >
    Presets:
  </h4>
  <div>
    <div
      class="jc-tag jc-tag-magenta"
      data-show="true"
    >
      magenta
    </div>
    <div
      class="jc-tag jc-tag-red"
      data-show="true"
    >
      red
    </div>
    <div
      class="jc-tag jc-tag-volcano"
      data-show="true"
    >
      volcano
    </div>
    <div
      class="jc-tag jc-tag-orange"
      data-show="true"
    >
      orange
    </div>
    <div
      class="jc-tag jc-tag-gold"
      data-show="true"
    >
      gold
    </div>
    <div
      class="jc-tag jc-tag-lime"
      data-show="true"
    >
      lime
    </div>
    <div
      class="jc-tag jc-tag-green"
      data-show="true"
    >
      green
    </div>
    <div
      class="jc-tag jc-tag-cyan"
      data-show="true"
    >
      cyan
    </div>
    <div
      class="jc-tag jc-tag-blue"
      data-show="true"
    >
      blue
    </div>
    <div
      class="jc-tag jc-tag-geekblue"
      data-show="true"
    >
      geekblue
    </div>
    <div
      class="jc-tag jc-tag-purple"
      data-show="true"
    >
      purple
    </div>
  </div>
  <h4
    style="margin:16px 0"
  >
    Custom:
  </h4>
  <div>
    <div
      class="jc-tag jc-tag-has-color"
      data-show="true"
      style="background-color:#f50"
    >
      #f50
    </div>
    <div
      class="jc-tag jc-tag-has-color"
      data-show="true"
      style="background-color:#2db7f5"
    >
      #2db7f5
    </div>
    <div
      class="jc-tag jc-tag-has-color"
      data-show="true"
      style="background-color:#87d068"
    >
      #87d068
    </div>
    <div
      class="jc-tag jc-tag-has-color"
      data-show="true"
      style="background-color:#108ee9"
    >
      #108ee9
    </div>
  </div>
</div>
`;

exports[`renders ./components/tag/demo/Control.js correctly test 1`] = `
<div>
  <div
    class="jc-tag"
    data-show="true"
  >
    Unremovable
  </div>
  <div
    class="jc-tag"
    data-show="true"
  >
    Tag 2
    <i
      class="jcicon jcicon-cross "
    />
  </div>
  <div
    class="jc-tag"
    data-show="true"
  >
    Tag 3
    <i
      class="jcicon jcicon-cross "
    />
  </div>
  <div
    class="jc-tag"
    data-show="true"
    style="background:#fff;border-style:dashed"
  >
    <i
      class="jcicon jcicon-plus "
    />
     New Tag
  </div>
</div>
`;

exports[`renders ./components/tag/demo/Hot-tags.js correctly test 1`] = `
<div>
  <h6
    style="margin-right:8px;display:inline"
  >
    Categories:
  </h6>
  <div
    class="jc-tag jc-tag-checkable"
  >
    Movies
  </div>
  <div
    class="jc-tag jc-tag-checkable"
  >
    Books
  </div>
  <div
    class="jc-tag jc-tag-checkable"
  >
    Music
  </div>
  <div
    class="jc-tag jc-tag-checkable"
  >
    Sports
  </div>
</div>
`;
